k8s/mongo-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: tqs-mongo
spec:
  selector:
    app: tqs-mongo
  ports:
    - port: 27017
      targetPort: 27017

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tqs-mongo
spec:
  selector:
    matchLabels:
      app: tqs-mongo
  template:
    metadata:
      labels:
        app: tqs-mongo
    spec:
      containers:
        - name: tqs-mongo
          image: mongo:5.0.2
          resources:
            limits:
              memory: "1024Mi"
              cpu: "500m"
          ports:
            - containerPort: 27017
