k8s/tqs-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: tqs-service
spec:
  selector:
    app: tqs
  ports:
    - port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tqs
spec:
  selector:
    matchLabels:
      app: tqs
  template:
    metadata:
      labels:
        app: tqs
    spec:
      containers:
        - name: tqs
          image: broswen/tqs:1.2.0
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred
